--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <img src="img/my-pic.jpg" alt="Zeddrix's picture" width="200px" />
       </div>
       <div id="intro">
-        <h1>Zeddrix Fabian</h1>
+        <h1 id="my-name">Zeddrix Fabian</h1>
         <h2 id="job">Developer</h2>
         <p>
-          I am a developer with 2 years of experience. I've developed 2 apps and
+          A developer with 2 years experience. I've developed 2 apps and
           1 game.
         </p>
       </div>
@@ -56,7 +56,7 @@
     <div id="resume-body">
       <h2 id="projects-header">Projects</h2>
       <div id="bible-query">
-        <h3>Bible Query</h3>
+        <h3 class="project-names">Bible Query</h3>
         <ul>
           <li>A multiple choice Bible quiz with multiple levels</li>
           <li>Used Photoshop for creating my own buttons</li>
@@ -65,7 +65,7 @@
         </ul>
       </div>
       <div id="portfolio-website">
-        <h3>Portfolio Website</h3>
+        <h3 class="project-names">Portfolio Website</h3>
         <ul>
           <li>Aided with a virtual environment</li>
           <li>Made models and connected them with the apps of the website</li>
@@ -76,7 +76,7 @@
         </ul>
       </div>
       <div id="word-counter-web">
-        <h3>Word Counter Website</h3>
+        <h3 class="project-names">Word Counter Website</h3>
         <ul>
           <li>Ran the Django server at any time</li>
           <li>Altered and customized URLs for the client's likes</li>
