--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id="my-name">Zeddrix Fabian</h1>
         <h2 id="job">Developer</h2>
         <p>
-          A developer with 2 years experience. I've developed 2 apps and
+          A developer with 2 years experience. I've developed 3 websites and
           1 game.
         </p>
       </div>
@@ -56,7 +56,7 @@
     <div id="resume-body">
       <h2 id="projects-header">Projects</h2>
       <div id="bible-query">
-        <h3 class="project-names">Bible Query</h3>
+        <h3 class="project-names">Bible Query (game)</h3>
         <ul>
           <li>A multiple choice Bible quiz with multiple levels</li>
           <li>Used Photoshop for creating my own buttons</li>
@@ -64,8 +64,18 @@
           <li>Created modals for clues and other buttons</li>
         </ul>
       </div>
+      <div id="just-color">
+        <h3 class="project-names">Just Color! (website)</h3>
+        <ul>
+          <li>Very simplified HTML and CSS code</li>
+          <li>Mostly vanilla JavaScript code</li>
+          <li>With one random color button</li>
+          <li>You can add your preferred color button</li>
+        </ul>
+        <p>Check it out at: <a href="https://zeddrix.github.io/just-color">just-color.com</a> </p>
+      </div>
       <div id="portfolio-website">
-        <h3 class="project-names">Portfolio Website</h3>
+        <h3 class="project-names">My Portfolio Website</h3>
         <ul>
           <li>Aided with a virtual environment</li>
           <li>Made models and connected them with the apps of the website</li>
@@ -76,7 +86,7 @@
         </ul>
       </div>
       <div id="word-counter-web">
-        <h3 class="project-names">Word Counter Website</h3>
+        <h3 class="project-names">Word Counter (website)</h3>
         <ul>
           <li>Ran the Django server at any time</li>
           <li>Altered and customized URLs for the client's likes</li>
