--- a/index.html
+++ b/index.html
@@ -12,42 +12,63 @@
       <div id="intro">
         <h1 id="my-name">Zeddrix Fabian</h1>
         <h2 id="job">Developer</h2>
-        <p>
-          A developer with 2 years experience. I've developed 3 websites and
-          1 game.
-        </p>
+        <i>
+          Developed 3 websites and 1 game in 2 years.
+        </i>
       </div>
     </div>
     <div id="contact-info-container">
       <div>
-        <img id="email-icon" src="img/email-icon.png" alt="email icon" width="22em" />
+        <img
+          class="icon"
+          src="img/website-icon.png"
+          alt="website icon"
+          width="20em"
+        />
+        <a href="https://zeddrix.com/" target="_blank" class="contact-info"
+          >zeddrix.com</a
+        >
+      </div>
+      <div>
+        <img
+          id="email-icon"
+          src="img/email-icon.png"
+          alt="email icon"
+          width="22em"
+        />
         <p class="contact-info">zeddrix.fabian@gmail.com</p>
       </div>
       <div>
-        <img class="icon" src="img/phone-icon.png" alt="phone icon" width="20em" />
+        <img
+          class="icon"
+          src="img/phone-icon.png"
+          alt="phone icon"
+          width="20em"
+        />
         <p class="contact-info">0928 307 4956</p>
       </div>
       <div>
-        <img class="icon" src="img/address-icon.png" alt="address icon" width="18em" />
+        <img
+          class="icon"
+          src="img/address-icon.png"
+          alt="address icon"
+          width="18em"
+        />
         <p class="contact-info">Poblacion IV, Tanza, Cavite</p>
-      </div>
-      <div>
-        <img class="icon" src="img/website-icon.png" alt="website icon" width="20em" />
-        <p class="contact-info">zeddrix.com</p>
       </div>
     </div>
     <div id="summary-side">
       <div id="skills">
-        <h2>Skills</h2>
-        <p>CSS styling</p>
+        <h2 class="summary-side-headers">Skills</h2>
         <p>Vanilla JavaScript</p>
+        <p>CSS styling</p>
         <p>Python</p>
         <p>Django</p>
         <p>Wordpress</p>
         <p>Photoshop</p>
       </div>
       <div id="education">
-        <h2>Education</h2>
+        <h2 class="summary-side-headers">Education</h2>
         <p>Elementary</p>
         <p>Highschool</p>
       </div>
@@ -71,8 +92,13 @@
           <li>Mostly vanilla JavaScript code</li>
           <li>With one random color button</li>
           <li>You can add your preferred color button</li>
+          <li>
+            Check it out at:
+            <a href="https://zeddrix.github.io/just-color" target="_blank"
+              >just-color.com</a
+            >
+          </li>
         </ul>
-        <p>Check it out at: <a href="https://zeddrix.github.io/just-color">just-color.com</a> </p>
       </div>
       <div id="portfolio-website">
         <h3 class="project-names">My Portfolio Website</h3>
@@ -86,7 +112,7 @@
         </ul>
       </div>
       <div id="word-counter-web">
-        <h3 class="project-names">Word Counter (website)</h3>
+        <h3 class="project-names">Word Counter Website</h3>
         <ul>
           <li>Ran the Django server at any time</li>
           <li>Altered and customized URLs for the client's likes</li>
