Humbled my intro.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id="my-name">Zeddrix Fabian</h1>
         <h2 id="job">Developer</h2>
         <i>
-          Developed 3 websites and 1 game in 2 years.
+          A junior developer. Sample resume.
         </i>
       </div>
     </div>
