--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Zedd's Resume</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
