--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
       <div class="skills__section">
         <h2 class="summary-side__header">Skills</h2>
         <p>Vanilla JavaScript</p>
-        <p>CSS styling</p>
+        <p>CSS:</p>
+        <ul>
+          <li>Flexbox</li>
+          <li>Grid</li>
+          <li>SASS</li>
+        </ul>
         <p>Python</p>
         <p>Django</p>
         <p>Wordpress</p>
