Applied flexbox on contact info.

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
       </div>
     </header>
     <div class="contact-info__container">
-      <div>
-        <img class="icon" src="img/website-icon.png" alt="website icon" width="20em"/>
+      <div class="contact-info__item">
+        <img class="web-icon icon" src="img/website-icon.png"/>
         <a href="https://zeddrix.com/" target="_blank" class="contact-info">zeddrix.com</a>
       </div>
-      <div>
-        <img class="email-icon" src="img/email-icon.png" alt="email icon" width="22em"/>
+      <div class="contact-info__item">
+        <img class="email-icon icon" src="img/email-icon.png"/>
         <p class="contact-info">zeddrix.fabian@gmail.com</p>
       </div>
-      <div>
-        <img class="icon" src="img/phone-icon.png" alt="phone icon" width="20em"/>
+      <div class="contact-info__item">
+        <img class="phone-icon icon" src="img/phone-icon.png"/>
         <p class="contact-info">0928 307 4956</p>
       </div>
-      <div>
-        <img class="icon" src="img/address-icon.png" alt="address icon" width="18em"/>
+      <div class="contact-info__item">
+        <img class="address-icon icon" src="img/address-icon.png"/>
         <p class="contact-info">Poblacion IV, Tanza, Cavite</p>
       </div>
     </div>
